Fix iframe overflow behavior

--- a/src/scripts/postblock/options/index.css
+++ b/src/scripts/postblock/options/index.css
@@ -18,6 +18,7 @@ html {
   font-size: 14px;
   scrollbar-color: rgb(var(--grey)) transparent;
   scrollbar-width: thin;
+  overflow-y: hidden;
 }
 
 body {
