--- a/src/scripts/quick_tags/options/index.css
+++ b/src/scripts/quick_tags/options/index.css
@@ -18,6 +18,7 @@ html {
   font-size: 14px;
   scrollbar-color: rgb(var(--dark-grey)) transparent;
   scrollbar-width: thin;
+  overflow-y: hidden;
 }
 
 body {
